--- a/project.css
+++ b/project.css
@@ -1,4 +1,19 @@
 
+.video-background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1; /* taki content video ke upar dikhai de */
+}
+
+#bg-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* full screen cover karega */
+}
 
 body {
   margin: 0;
@@ -53,14 +68,15 @@ body {
   font-family: 'Montserrat', sans-serif;
   font-size: 54px;
   margin-bottom: 15px;
-  color: #2A7B9B;
+  /* color: #2A7B9B; */
+  color: white;
   font-weight: 700;
 }
 
 .hero p {
   font-size: 20px;
   font-weight: 400;
-  color: #444;
+  color: white;
   margin-bottom: 50px;
 }
 
@@ -70,7 +86,8 @@ body {
   justify-content: center;
   gap: 15px;
   flex-wrap: wrap;
-}
+  color: white;
+} 
 
 .trip-form select,
 .trip-form input {
@@ -135,7 +152,8 @@ body {
 
 .about h2 {
   font-size: 34px;
-  color: #2A7B9B;
+  /* color: #2A7B9B; */
+  color: white;
   font-family: 'Montserrat', sans-serif;
   font-weight: 700;
   margin-bottom: 20px;
@@ -144,7 +162,8 @@ body {
 .about p {
   max-width: 700px;
   margin: auto;
-  color: #444;
+  /* color: #444; */
+  color: white;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
   margin-bottom: 50px;
@@ -201,20 +220,22 @@ footer {
 .suggested-trips {
   text-align: center;
   padding: 60px 20px;
-  background: linear-gradient(135deg, #a8edea, #fed6e3);
+  background: url(mountains\ bg.mp4) no-repeat center center/cover;
 }
 
 .suggested-trips h2 {
   font-size: 2rem;
   margin-bottom: 10px;
-  color: #1e293b;
+  /* color: #1e293b; */
+  color: white;
 }
 
 .suggested-trips p {
-  color: #475569;
+  /* color: #475569; */
+  color: white;
   margin-bottom: 40px;
   font-size: 1.1rem;
-}
+} 
 
 .trips-container {
   display: grid;
