--- a/aboutus.css
+++ b/aboutus.css
@@ -5,17 +5,22 @@ body {
     line-height: 1.6;
     color: #333;
 }
-/* /header/ */
 header {
-    background: #444;
-    color: #fff;
-    padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 70px;   
+    padding: 0 50px; 
+    background: rgba(255, 255, 255, 0.75);
+    backdrop-filter: blur(12px);
+    font-family: 'Montserrat', sans-serif;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
 }
 header h1 {
-    margin: 0;
+    font-size: 26px;
+  font-weight: 700;
+  color: #2A7B9B;
+  letter-spacing: 1px;
 }
 header nav ul {
     list-style: none;
@@ -27,20 +32,18 @@ header nav ul li {
     margin: 0 15px;
 }
 header nav ul li a {
-    color: #fff;
-    text-decoration: none;
+    margin-left: 20px;
+  text-decoration: none;   
+  color: #2A7B9B;
+  font-weight: 600;
+  font-size: 16px;
+  transition: color 0.3s;
 }
-.search-form input {
-    padding: 5px;
-}
-.search-form button {
-    padding: 5px 10px;
-    background: #f90;
-    border: none;
-    cursor: pointer;
+header nav ul li a:hover {
+color: #055e85;
 }
 
-/* General Styles */
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -54,7 +57,6 @@ body {
     font-size: 2.5rem;
     font-weight: 800;
     margin-bottom: 2rem;
-    color: #333;
   }
   
   /* About Section */
@@ -63,6 +65,9 @@ body {
     background: linear-gradient(135deg, #a8edea, #fed6e3);
   }
   
+  h2{
+    color: #055e85;
+  }
   .about-container {
     max-width: 1200px;
     margin: auto;
