--- a/project.css
+++ b/project.css
@@ -52,7 +52,7 @@ body {
 
 .navbar a {
   margin-left: 20px;
-  text-decoration: none;   /* underline hata diya */
+  text-decoration: none;   
   color: #2A7B9B;
   font-weight: 600;
   font-size: 16px;
