--- a/aboutus.css
+++ b/aboutus.css
@@ -1,4 +1,4 @@
-
+/* 
 
 body {
     font-family: Arial, sans-serif;
@@ -151,7 +151,7 @@ body {
     font-size: 1rem;
     color: #555;
 }
-/* /Responsive Design/ */
+/* /Responsive Design/ 
 @media (max-width: 768px) {
     .team-container {
         flex-direction: column;
@@ -160,4 +160,4 @@ body {
     .team-member {
         width: 90%
     }
-} 
+}  */
